progress on project display

--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -1,202 +1,240 @@
 @font-face {
-    font-family: "FixedSys";
-    src: url("assets/FSEX300.ttf");
+  font-family: "FixedSys";
+  src: url("assets/FSEX300.ttf");
+}
+body {
+  overflow-x: hidden;
 }
 
-body {
-    overflow-x: hidden;
+#header {
+  transform: translate(-8px, -8px);
+  width: 100vw;
+  height: 100vh;
+  z-index: 0;
+  position: relative;
 }
 
 #lcd {
-    position: absolute;
-    top: 2vw;
-    width: max(40vw, 300px);
-    height: calc(max(40vw, 300px) * 0.4825);
+  z-index: 0;
+  top: 10px;
+  width: max(40vw, 300px);
+  height: calc(max(40vw, 300px) * 0.4825);
 }
 
 #lcd-matrix {
-    overflow: hidden;
-    font-family: "FixedSys";
-    text-align: center;
-    -webkit-text-fill-color: #c9e1ff;
-    -webkit-text-stroke-color: #c9e1ff;
-    width: 84.2105263158%;
-    height: 63.6363636364%;
-    margin: auto;
+  overflow: hidden;
+  font-family: "FixedSys";
+  text-align: center;
+  -webkit-text-fill-color: #c9e1ff;
+  -webkit-text-stroke-color: #c9e1ff;
+  width: 84.2105263158%;
+  height: 63.6363636364%;
+  margin: auto;
 }
-
 #lcd-matrix h1 {
-    font-size: calc(max(40vw, 300px) * 0.0875 * 1.8);
+  font-size: calc(max(40vw, 300px) * 0.0875 * 1.8);
 }
-
 #lcd-matrix p {
-    position: absolute;
-    -webkit-text-fill-color: rgba(201, 225, 255, 0.2509803922);
-    margin-top: 0;
-    margin-bottom: 0;
-    top: calc(max(40vw, 300px) * 0.0875 * -1);
-    font-size: calc(max(40vw, 300px) * 0.0875);
-    -webkit-animation-name: text-scroll-down;
-    animation-name: text-scroll-down;
-    -webkit-animation-timing-function: linear;
-    animation-timing-function: linear;
-    -webkit-animation-duration: 5s;
-    animation-duration: 5s;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-    transform-origin: center center;
+  position: absolute;
+  -webkit-text-fill-color: rgba(201, 225, 255, 0.2509803922);
+  margin-top: 0;
+  margin-bottom: 0;
+  top: calc(max(40vw, 300px) * 0.0875 * -1);
+  font-size: calc(max(40vw, 300px) * 0.0875);
+  -webkit-animation-name: text-scroll-down;
+          animation-name: text-scroll-down;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation-duration: 5s;
+          animation-duration: 5s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  transform-origin: center center;
 }
 
 p:nth-child(1) {
-    -webkit-animation-delay: 4s;
-    animation-delay: 4s;
-    -moz-animation-delay: 4s;
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+  -moz-animation-delay: 4s;
 }
 
 p:nth-child(2) {
-    -webkit-animation-delay: 5s;
-    animation-delay: 5s;
-    -moz-animation-delay: 5s;
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+  -moz-animation-delay: 5s;
 }
 
 p:nth-child(3) {
-    -webkit-animation-delay: 6s;
-    animation-delay: 6s;
-    -moz-animation-delay: 6s;
+  -webkit-animation-delay: 6s;
+          animation-delay: 6s;
+  -moz-animation-delay: 6s;
 }
 
 p:nth-child(4) {
-    -webkit-animation-delay: 7s;
-    animation-delay: 7s;
-    -moz-animation-delay: 7s;
+  -webkit-animation-delay: 7s;
+          animation-delay: 7s;
+  -moz-animation-delay: 7s;
 }
 
 p:nth-child(5) {
-    -webkit-animation-delay: 8s;
-    animation-delay: 8s;
-    -moz-animation-delay: 8s;
+  -webkit-animation-delay: 8s;
+          animation-delay: 8s;
+  -moz-animation-delay: 8s;
 }
 
 @-webkit-keyframes text-scroll-down {
-    0% {
-        transform: translate(0, 0);
-    }
-
-    100% {
-        transform: translate(0, calc(max(40vw, 300px) * 0.0875 * 5));
-    }
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(0, calc(max(40vw, 300px) * 0.0875 * 5));
+  }
 }
 
 @keyframes text-scroll-down {
-    0% {
-        transform: translate(0, 0);
-    }
-
-    100% {
-        transform: translate(0, calc(max(40vw, 300px) * 0.0875 * 5));
-    }
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(0, calc(max(40vw, 300px) * 0.0875 * 5));
+  }
 }
-
 .center {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-
 .center-horizontal {
-    margin: 0;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 0%);
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0%);
 }
 
 #post-it {
-    width: calc((100vw - max(40vw, 300px)) / 2);
-    position: relative;
+  width: calc((100vw - max(40vw, 300px)) / 2);
+  position: relative;
 }
-
 #post-it:nth-child(2) {
-    right: -70vw;
+  right: -70vw;
 }
-
 #post-it #note {
-    position: absolute;
-    width: 20vw;
-    height: 20vw;
+  position: absolute;
+  width: 20vw;
+  height: 20vw;
 }
-
 #post-it img {
-    position: absolute;
-    width: 80%;
-    height: 80%;
+  position: absolute;
+  width: 80%;
+  height: 80%;
 }
 
 #content {
-    transform: translateY(max(28vw, max(40vw, 300px) * 0.4825 * 1.05));
-    width: 100vw;
-    text-align: center;
+  left: 0px;
+  position: absolute;
+  width: 100vw;
+  height: 200vh;
+  text-align: center;
 }
-
 #content #construction {
-    border-radius: 5px;
-    width: 80%;
-    min-height: 50px;
-    background: repeating-linear-gradient(45deg, #f3d217, #f3d217 40px, #423707 40px, #423707 80px);
-    transform: translateX(12.5%);
+  border-radius: 5px;
+  width: 80%;
+  min-height: 50px;
+  background: repeating-linear-gradient(45deg, #f3d217, #f3d217 40px, #423707 40px, #423707 80px);
+  transform: translateX(12.5%);
 }
-
 #content #construction h1 {
-    font-family: "Comic Sans MS";
-    color: #e94b0d;
-    font-size: calc(max(40vw, 300px) * 0.0875);
+  font-family: "Comic Sans MS";
+  color: #e94b0d;
+  font-size: calc(max(40vw, 300px) * 0.0875);
 }
-
-#content .btn {
-    display: inline-block;
-    border-radius: 5px;
-    height: 512px;
-    width: 512px;
-    margin: 20px 20px 20px 20px;
-    border: 1px solid #f1f1f1;
-    perspective: 1000px;
-    transform-style: preserve-3d;
-    transition: 0.6s all;
+#content iframe,
+#content img {
+  left: 0;
+  position: static;
+  height: min(512px, 30vw);
+  border-radius: 5px;
+  transition: all 0.6s;
 }
-
-#content .btn img {
-    width: 100%;
-    height: 100%;
+#content iframe {
+  background: linear-gradient(left, rgba(0, 0, 0, 0), #FFFFFF);
+  width: calc(min(512px, 30vw) * 2);
+}
+#content img {
+  width: min(512px, 30vw);
+}
+#content .active,
+#content .wrapper {
+  display: inline-block;
+  height: min(512px, 30vw);
+  margin: 20px 20px 20px 20px;
+}
+#content .wrapper iframe {
+  border: none;
+  transform: scaleX(0);
+}
+#content .wrapper img {
+  transform: translateX(100%);
+}
+#content .active img {
+  transform: translateX(0%);
+}
+#content .active iframe {
+  transform: scaleX(1);
 }
 
 #cover {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    visibility: hidden;
-    opacity: 0;
-    background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  visibility: hidden;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.5);
+  transition: 0.6s;
+}
+#cover .active {
+  visibility: visible;
+  opacity: 1;
 }
 
 #popup {
-    position: absolute;
-    width: 440px;
-    left: 50%;
-    top: 50%;
-    margin: -140px 0 0 -220px;
-    border: none;
-    /* visibility: hidden; */
-    /* opacity: 0; */
-    z-index: 2;
-    padding: 30px;
-    background: white;
-    box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.3);
-    border-radius: 3px;
-    box-sizing: border-box;
+  position: absolute;
+  width: 440px;
+  left: 50%;
+  top: 50%;
+  margin: -140px 0 0 -220px;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 2;
+  padding: 30px;
+  background: white;
+  box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  box-sizing: border-box;
+  transition: 0.6s;
+}
+#popup .active {
+  visibility: visible;
+  opacity: 1;
 }
 
-/*# sourceMappingURL=styles.css.map */
+#content {
+  background-image: linear-gradient(90deg, #7697d4, #4d69aa);
+}
+
+#grid {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  background-image: linear-gradient(0deg, transparent 9%, rgba(255, 255, 255, 0.2) 10%, rgba(255, 255, 255, 0.2) 12%, transparent 13%, transparent 29%, rgba(255, 255, 255, 0.1) 30%, rgba(255, 255, 255, 0.1) 31%, transparent 32%, transparent 49%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.1) 51%, transparent 52%, transparent 69%, rgba(255, 255, 255, 0.1) 70%, rgba(255, 255, 255, 0.1) 71%, transparent 72%, transparent 89%, rgba(255, 255, 255, 0.1) 90%, rgba(255, 255, 255, 0.1) 91%, transparent 92%, transparent), linear-gradient(90deg, transparent 9%, rgba(255, 255, 255, 0.2) 10%, rgba(255, 255, 255, 0.2) 12%, transparent 13%, transparent 29%, rgba(255, 255, 255, 0.1) 30%, rgba(255, 255, 255, 0.1) 31%, transparent 32%, transparent 49%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.1) 51%, transparent 52%, transparent 69%, rgba(255, 255, 255, 0.1) 70%, rgba(255, 255, 255, 0.1) 71%, transparent 72%, transparent 89%, rgba(255, 255, 255, 0.1) 90%, rgba(255, 255, 255, 0.1) 91%, transparent 92%, transparent);
+  height: 100%;
+  background-size: 50px 50px;
+}/*# sourceMappingURL=styles.css.map */
