--- a/web/template/header.html
+++ b/web/template/header.html
@@ -29,6 +29,8 @@
                 <!-- <canvas id="lcd-matrix-canvas" class="center" width="110" height="40"></canvas> -->
             </div>
         </div>
+
+        <img id="flop" src="assets/big-floppa.gif">
     </div>
     <div id="content">
         <div id="grid"></div>
