--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -13,6 +13,13 @@ body {
   z-index: 0;
   position: relative;
 }
+#header #flop {
+  position: relative;
+  width: calc(max(40vw, 300px) * 0.6);
+  height: calc(max(40vw, 300px) * 0.6);
+  top: calc(105vh - max(40vw, 300px) * 0.6);
+  left: calc(50vw - max(40vw, 300px) * 0.6 / 2);
+}
 
 #lcd {
   z-index: 0;
@@ -152,11 +159,12 @@ p:nth-child(5) {
 }
 #content iframe,
 #content img {
+  box-shadow: 5px 10px 8px rgba(0, 0, 0, 0.1529411765);
   left: 0;
   position: static;
   height: min(512px, 30vw);
   border-radius: 5px;
-  transition: all 0.6s;
+  transition: all 1s;
 }
 #content iframe {
   background: linear-gradient(left, rgba(0, 0, 0, 0), #FFFFFF);
@@ -172,17 +180,19 @@ p:nth-child(5) {
   margin: 20px 20px 20px 20px;
 }
 #content .wrapper iframe {
+  visibility: hidden;
   border: none;
   transform: scaleX(0);
 }
 #content .wrapper img {
   transform: translateX(100%);
 }
+#content .active iframe {
+  visibility: visible;
+  transform: scaleX(1);
+}
 #content .active img {
   transform: translateX(0%);
-}
-#content .active iframe {
-  transform: scaleX(1);
 }
 
 #cover {
