--- a/web/template/header.html
+++ b/web/template/header.html
@@ -40,11 +40,10 @@
             </h1>
         </div>
 
-        {{CONTENT}}
-        <div class="wrapper">
-            <img src="assets/isospin.png">
-            <iframe src="isospin.md"></iframe>
+        <div class="flex">
+            {{CONTENT}}
         </div>
+
     </div>
 
 
