--- a/web/template/header.html
+++ b/web/template/header.html
@@ -4,21 +4,16 @@
     <meta charset="UTF-8">
     <title>Isospin</title>
     <link rel="stylesheet" href="styles.css">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script defer src="header.js"></script>
 </head>
 
 <body>
-    <!-- <iframe id="popup" src="test.md"></iframe> -->
-
     <div id="header">
         <div id="post-it">{{POST-IT-L}}</div>
         <div id="post-it">{{POST-IT-R}}</div>
-
         <div id="lcd" class="center-horizontal">
             <object type="image/svg+xml" data="assets/lcd_dot_matrix.svg"></object>
-
             <div id="lcd-matrix" class="center">
                 <p></p>
                 <p></p>
@@ -26,26 +21,17 @@
                 <p></p>
                 <p></p>
                 <h1 class="center">&ltISOSPIN&gt</h1>
-                <!-- <canvas id="lcd-matrix-canvas" class="center" width="110" height="40"></canvas> -->
             </div>
         </div>
-
         <img id="flop" src="assets/big-floppa.gif">
     </div>
     <div id="content">
         <div id="grid"></div>
         <div id="construction">
-            <h1>
-                🚧Under Construction!🚧
-            </h1>
+            <h1>🚧Under Construction!🚧</h1>
         </div>
-
         <div class="flex">
             {{CONTENT}}
         </div>
-
     </div>
-
-
-    <!-- <div id="cover"></div> -->
 </body>
