--- a/web/template/header.html
+++ b/web/template/header.html
@@ -26,6 +26,7 @@
         <img id="flop" src="assets/big-floppa.gif">
     </div>
     <div id="content">
+        <div id="tabs"></div>
         <div id="grid"></div>
         <div id="construction">
             <h1>🚧Under Construction!🚧</h1>
