--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -142,8 +142,9 @@ p:nth-child(5) {
 #content {
   left: 0px;
   position: absolute;
-  width: 100vw;
-  height: 200vh;
+  left: 12.5vw;
+  width: 75vw;
+  padding-bottom: 20vh;
   text-align: center;
 }
 #content #construction {
@@ -169,23 +170,22 @@ p:nth-child(5) {
   display: inline-block;
   box-shadow: 5px 10px 8px rgba(0, 0, 0, 0.1529411765);
   position: static;
-  height: min(512px, 30vw);
+  height: 25.5vw;
   border-radius: 5px;
-  transition: all 1s;
+  transition: transform 1s, filter 0.4s;
 }
 #content .desc {
   overflow-y: scroll;
   text-align: left;
-  width: calc(min(512px, 30vw) * 2);
+  width: 38.25vw;
   margin-left: 8px;
 }
 #content .icon {
-  width: min(512px, 30vw);
+  width: 25.5vw;
 }
 #content .active,
 #content .wrapper {
-  height: min(512px, 30vw);
-  margin: 20px 20px 20px 20px;
+  margin: 0;
 }
 #content .wrapper .desc {
   visibility: hidden;
@@ -193,7 +193,7 @@ p:nth-child(5) {
   transform: scaleX(0);
 }
 #content .wrapper .icon {
-  transform: translateX(100%);
+  transform: translateX(75%);
 }
 #content .active .desc {
   visibility: visible;
@@ -203,52 +203,19 @@ p:nth-child(5) {
   transform: translateX(0%);
 }
 
-#cover {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  visibility: hidden;
-  opacity: 0;
-  background: rgba(0, 0, 0, 0.5);
-  transition: 0.6s;
-}
-#cover .active {
-  visibility: visible;
-  opacity: 1;
-}
-
-#popup {
-  position: absolute;
-  width: 440px;
-  left: 50%;
-  top: 50%;
-  margin: -140px 0 0 -220px;
-  visibility: hidden;
-  opacity: 0;
-  z-index: 2;
-  padding: 30px;
-  background: white;
-  box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.3);
-  border-radius: 3px;
-  box-sizing: border-box;
-  transition: 0.6s;
-}
-#popup .active {
-  visibility: visible;
-  opacity: 1;
-}
-
 #content {
   background-image: linear-gradient(90deg, #7697d4, #4d69aa);
+}
+#content #tabs {
+  position: absolute;
+  transform: translateY(-10vh);
+  height: 10vh;
+  background: none;
 }
 
 #grid {
   position: absolute;
   left: 0;
-  top: 0;
   width: 100%;
   height: 100%;
   background-color: transparent;
