--- a/web/template/header.html
+++ b/web/template/header.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <head>
     <meta charset="UTF-8">
@@ -25,14 +25,5 @@
         </div>
         <img id="flop" src="assets/big-floppa.gif">
     </div>
-    <div id="content">
-        <div id="tabs"></div>
-        <div id="grid"></div>
-        <div id="construction">
-            <h1>🚧Under Construction!🚧</h1>
-        </div>
-        <div class="flex">
-            {{CONTENT}}
-        </div>
-    </div>
+    {{CONTENT}}
 </body>
