Revert "more baking html!"
This reverts commit 67099e30c534b6db6d6c850c714430acf26cc67f.

--- a/web/template/header.html
+++ b/web/template/header.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 
 <head>
     <meta charset="UTF-8">
@@ -25,5 +25,14 @@
         </div>
         <img id="flop" src="assets/big-floppa.gif">
     </div>
-    {{CONTENT}}
+    <div id="content">
+        <div id="tabs"></div>
+        <div id="grid"></div>
+        <div id="construction">
+            <h1>🚧Under Construction!🚧</h1>
+        </div>
+        <div class="flex">
+            {{CONTENT}}
+        </div>
+    </div>
 </body>
