--- a/web/static/styles.scss
+++ b/web/static/styles.scss
@@ -243,6 +243,8 @@ $pane-width: 0.75;
 
 
 #content {
+    background-image: linear-gradient(90deg, #7697d4, #4d69aa);
+
     #tabs {
         position: absolute;
         transform: translateY(-10vh);
@@ -256,7 +258,7 @@ $pane-width: 0.75;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #7697d4;
+    background-color: transparent;
     background-image:
         linear-gradient(0deg, transparent 9%,
             rgba(255, 255, 255, .2) 10%, rgba(255, 255, 255, .2) 12%, transparent 13%, transparent 29%,
