--- a/web/template/home.html
+++ b/web/template/home.html
@@ -1,10 +1,21 @@
 <div id="content">
-    <div id="tabs"></div>
-    <div id="grid"></div>
-    <div id="construction">
-        <h1>🚧Under Construction!🚧</h1>
+    <div id="tabs">
+        <div>
+            <!-- <span style="color:#217bf0">goto</span> blog; ↷ -->
+        </div>
     </div>
+    <div id="frame"></div>
     <div class="flex">
+        <div id="title">
+            <svg width="60" height="20" style="position: absolute; right: 0; top: 0;">
+                <circle cx="17" cy="10" r="6" fill="var(--gb-green)" />
+                <circle cx="33" cy="10" r="6" fill="var(--gb-yellow)" />
+                <circle cx="49" cy="10" r="6" fill="var(--gb-red)" />
+            </svg>
+            <i><span id="gb-blue">Viewing</span><span id="gb-green"> - </span><span id="gb-yellow">web</span><span
+                    id="gb-green">/</span><span id="gb-yellow">template</span><span id="gb-green">/</span><span
+                    id="gb-yellow">home</span><span id="gb-red">.html</span></i>
+        </div>
         {{CONTENT}}
     </div>
 </div>
