--- a/web/static/text.css
+++ b/web/static/text.css
@@ -1,3 +1,5 @@
+@import "gruvbox-color.css";
+
 .markdown-body {
     padding: 16px 32px 16px 32px;
     background: linear-gradient(0deg, #0d11174d, #0d11177a);
